# PY_TESTS

./: .gitignore  POETRY.ini  PROJECT.ini  README.md  REPO.ini  new.bat  pyproject.toml
ListDir/: ListDir.bat  ListDir.py  ListDir.txt  ListDir2.bat  ListDir2.py  ListDir3.bat  ListDir3.py
SRC/TEST_Celery/: TEST_Celery.py
SRC/TEST_RE/: re.py
ScanFile/: ScanFile.py
TEST_Celery/: TEST_Celery.py  TEST_Celery.spec
TEST_LU/: TEST_FormaTXT.py  TEST_FormaTXT.txt  TEST_LU.py  TEST_LUConsole.py  TEST_LUDateTime.py  TEST_LUFile.py  TEST_LULog.py  TEST_LUParserARG.py  TEST_LUParserINI.py  TEST_LUParserREG.py  TEST_LUSheduler.py  TEST_LUStrUtils.py  TEST_LUSupport.py  TEST_LUos.py  TEST_LUsys.py  TEST_YOUTUBE.py  TEST_YOUTUBE_tk.py  TEST_schedule.py  logging.CONFIG  logging.YAML  logging.ini
TEST_LU/DelFiles/: DelFiles.py  DirFiles.txt
TEST_LU/DirFiles/: DirFiles.py  DirFiles.txt
TEST_LU/LU/: TEST_LUFile.py  TEST_LULog.py  TEST_LUParserARG.py  TEST_LUParserREG.py  TEST_LUSupport.py  TEST_LUsys.py  logging.ini
TEST_LU/ListDir/: ListDir.bat  ListDir.py  ListDir.txt  ListDir2.py  ListDir2.txt  ListDir3.py  ListDir3.txt
TEST_LU/ScanDir/: ScanDir.py  ScanFile.py  TEST_ScanDir.py
TEST_LU/TEST_LUFileUtils/: BacFiles.py  DelDir.py  DirFiles.py  FakeFiles.py  ListDir.py  ListDir1.bat  ListDir1.py  SyncFiles.py
TEST_QT5_PY/TEST_GeneratePassword/: main.py
TEST_QT5_PY/TEST_YouTube/: Downloader_save.py
TEST_QT6_PY/TEST_02/: form.ui
TEST_QT6_PY/TEST_04/: ui_form.py
TEST_QT6_PY/TEST_QTsignal_slot/: QTsignal_slot.py
Version/: Version.bat
WORK/: Тестовая строка
(+39 files in other folders)
