[tool.poetry]
name = "TESTS_PY"
version = "0.1.0"
description = ""
authors = ["lisitsinyr <lisitsinyr@gmail.com>"]
readme = "README.md"

include = [
    { path = "DOC", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
